--- a/src/pages/seguros-vida/star-dotal.astro
+++ b/src/pages/seguros-vida/star-dotal.astro
@@ -20,7 +20,7 @@ import Contact from '../../components/Contact.astro';
             El ahorro que necesitas para alcanzar tus metas
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="/contacto" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-4 px-8 rounded-full transition-all duration-300 transform hover:scale-105">
+            <a href="#contacto" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-4 px-8 rounded-full transition-all duration-300 transform hover:scale-105">
               Me Interesa
             </a>
             <a href="#como-funciona" class="border-2 border-white text-white hover:bg-white hover:text-purple-900 font-semibold py-4 px-8 rounded-full transition-all duration-300">
@@ -307,7 +307,7 @@ import Contact from '../../components/Contact.astro';
           Star Dotal comparte tu proyecto de vida para hacer de tus metas un logro real. Comienza a ahorrar hoy.
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="/contacto" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-4 px-8 rounded-full transition-all duration-300 transform hover:scale-105">
+          <a href="#contacto" class="bg-yellow-500 hover:bg-yellow-600 text-black font-semibold py-4 px-8 rounded-full transition-all duration-300 transform hover:scale-105">
             Quiero Star Dotal
           </a>
           <a href="https://wa.me/524461354113" class="border-2 border-white text-white hover:bg-white hover:text-purple-900 font-semibold py-4 px-8 rounded-full transition-all duration-300">
